--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Barber Shop</title>
 
     <link rel="stylesheet" href="src/scss/main.css" />
+
+    <script src="src/js/script.js"></script>
   </head>
   <body>
     <!-- HEADER -->
@@ -18,16 +20,16 @@
             <div class="menu">
               <ul class="list">
                 <li class="list-link">
-                  <a href="#" class="link-menu active">Home</a>
+                  <a href="index.html" class="link-menu active">Home</a>
                 </li>
                 <li class="list-link submenu-active">
-                  <a href="#" class="link-menu space">About Us</a>
+                  <a href="about-us.html" class="link-menu space">About Us</a>
                 </li>
                 <li class="list-link">
-                  <a href="#" class="link-menu">Appointment</a>
+                  <a href="appointment.html" class="link-menu">Appointment</a>
                 </li>
                 <li class="list-link">
-                  <a href="#" class="link-menu">Contact</a>
+                  <a href="contact.html" class="link-menu">Contact</a>
                 </li>
               </ul>
               <a href="#login" rel="modal:open" class="primary-button modal-btn"
