--- a/index.html
+++ b/index.html
@@ -264,15 +264,15 @@
     <!-- BOOK APPOINTMENT -->
     <section class="book-appointment">
       <div class="book-appointment-bkg">
-        <div class="container book-appointment-content">
-          <h2 class="title">Book your appointment</h2>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <a href="#login" rel="modal:open" class="primary-button modal-btn"
-            >Make an appointment</a
-          >
+        <div class="book-appointment-content">
+          <div class="content">
+            <h2 class="title">Book your appointment</h2>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <a href="" class="primary-button">Make an appointment</a>
         </div>
       </div>
     </section>
