--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
       <div class="container">
         <nav class="navigation-component">
           <div class="elements-nav">
-            <a href="#" class="logo"><img src="img/logo-white.png" alt="" /></a>
+            <a href="index.html" class="logo"><img src="img/logo-white.png" alt="" /></a>
 
             <div class="menu">
               <ul class="list">
@@ -70,8 +70,8 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
             <div class="buttons-container">
-              <a href="#" class="primary-button">Make an appointment</a>
-              <a href="#" class="primary-button transp">Find a barber</a>
+              <a href="appointment.html" class="primary-button">Make an appointment</a>
+              <a href="about-us.html" class="primary-button transp">Find a barber</a>
             </div>
           </div>
           <div class="hero-img">
@@ -629,7 +629,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="#login" rel="modal:open" class="primary-button modal-btn"
+          <a href="appointment.html" class="primary-button"
             >Make an appointment</a
           >
         </div>
@@ -640,28 +640,30 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-links">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img src="img/logo-black.png" alt="Logo" />
           </a>
           <div class="footer-list">
             <p class="title-list">Menu</p>
-            <a class="item-list" href="#s">Home</a>
-            <a class="item-list" href="#s">About Us</a>
-            <a class="item-list" href="#s">Appointment</a>
-            <a class="item-list" href="#s">Contact</a>
+            <a class="item-list" href="index.html">Home</a>
+            <a class="item-list" href="about-us.html">About Us</a>
+            <a class="item-list" href="appointment.html">Appointment</a>
+            <a class="item-list" href="contact.html">Contact</a>
           </div>
 
           <div class="footer-list">
             <p class="title-list">Follow Us</p>
-            <a class="item-list" href="#s">Instagram</a>
-            <a class="item-list" href="#s">Facebook</a>
+            <a class="item-list" target="_blank" href="https://www.instagram.com/">Instagram</a>
+            <a class="item-list" target="_blank"  href="https://www.facebook.com/?locale=ro_RO">Facebook</a>
           </div>
 
           <div class="footer-list">
             <p class="title-list">Contact Us</p>
             <p class="item-list" href="#s">Cluj-Napoca, str. Florilor 34</p>
-            <a class="item-list" href="#s">+40745667893</a>
-            <a class="item-list" href="#s">barberShop@yahoo.com</a>
+            <a href="mailto:barberShop@yahoo.com" class="item-list"
+              >barberShop@yahoo.com</a
+            >
+            <a href="tel:+40745667893" class="item-list">+40745667893</a>
           </div>
         </div>
       </div>
