--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <div class="container">
         <nav class="navigation-component">
           <div class="elements-nav">
-            <a href="#" class="logo"><img src="img/logo-white.png" alt="" /></a>
+            <a href="index.html" class="logo"
+              ><img src="img/logo-white.png" alt=""
+            /></a>
 
             <div class="menu">
               <ul class="list">
@@ -75,7 +77,9 @@
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <a href="#" class="primary-button large-button text-button"
+            <a
+              href="appointment.html"
+              class="primary-button large-button text-button"
               >Make an appointment</a
             >
           </div>
@@ -272,7 +276,9 @@
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
           </div>
-          <a href="" class="primary-button">Make an appointment</a>
+          <a href="appointment.html" class="primary-button"
+            >Make an appointment</a
+          >
         </div>
       </div>
     </section>
@@ -281,28 +287,40 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-links">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img src="img/logo-black.png" alt="Logo" />
           </a>
           <div class="footer-list">
             <p class="title-list">Menu</p>
-            <a class="item-list" href="#s">Home</a>
-            <a class="item-list" href="#s">About Us</a>
-            <a class="item-list" href="#s">Appointment</a>
-            <a class="item-list" href="#s">Contact</a>
+            <a class="item-list" href="index.html">Home</a>
+            <a class="item-list" href="about-us.html">About Us</a>
+            <a class="item-list" href="appointment.html">Appointment</a>
+            <a class="item-list" href="contact.html">Contact</a>
           </div>
 
           <div class="footer-list">
             <p class="title-list">Follow Us</p>
-            <a class="item-list" href="#s">Instagram</a>
-            <a class="item-list" href="#s">Facebook</a>
+            <a
+              class="item-list"
+              target="_blank"
+              href="https://www.instagram.com/"
+              >Instagram</a
+            >
+            <a
+              class="item-list"
+              target="_blank"
+              href="https://www.facebook.com/?locale=ro_RO"
+              >Facebook</a
+            >
           </div>
 
           <div class="footer-list">
             <p class="title-list">Contact Us</p>
             <p class="item-list" href="#s">Cluj-Napoca, str. Florilor 34</p>
-            <a class="item-list" href="#s">+40745667893</a>
-            <a class="item-list" href="#s">barberShop@yahoo.com</a>
+            <a href="mailto:barberShop@yahoo.com" class="item-list"
+              >barberShop@yahoo.com</a
+            >
+            <a href="tel:+40745667893" class="item-list">+40745667893 (Main)</a>
           </div>
         </div>
       </div>
