--- a/about-us.html
+++ b/about-us.html
@@ -211,6 +211,36 @@
       </div>
     </section>
 
+    <section class="container">
+      <div class="working-hours-container">
+        <div class="working-hours-img">
+          <img src="img/working-hours-img.jpg" alt="">
+         </div>
+         <div class="content-container">
+          <h2 class="title">Working <span class="accent-yellow">Hours</span></h2>
+          <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="program-container">
+            <div class="program">
+              <p class="day">Weekdays</p>
+              <p class="hours">9 AM - 9 PM</p>
+            </div>
+            <div class="program">
+              <p class="day">Saturday</p>
+              <p class="hours">10 AM - 7 PM</p>
+            </div>
+            <div class="program">
+              <p class="day">Sunday</p>
+              <p class="hours">Closed</p>
+            </div>
+          </div>
+          <div class="buttons-container">
+            <a href="appointment.html" class="primary-button">Make an appointment</a>
+            <a href="about-us.html" class="primary-button transp">Find a barber</a>
+          </div>
+         </div>
+      </div>
+    </section>
+
     <!-- Testimonials -->
     <section class="container">
       <div class="testimonials-component swiper swiperCarousel">
