--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
       <div class="container">
         <nav class="navigation-component">
           <div class="elements-nav">
-            <a href="index.html" class="logo"><img src="img/logo-white.png" alt="" /></a>
+            <a href="index.html" class="logo"><img src="img/logo/logo-white.png" alt="" /></a>
 
             <div class="menu">
               <ul class="list">
@@ -58,7 +58,7 @@
       </div>
 
       <div class="container header">
-        <img src="img/background-triangle.png" class="triangle-bkg" alt="" />
+        <img src="img/background/background-triangle.png" class="triangle-bkg" alt="" />
         <div class="hero-component left-img">
           <div class="hero-description">
             <h1 class="hero-title about-us-title">
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="hero-img">
-            <img src="img/barber-shop-salon-6.jpg" alt="" />
+            <img src="img/salon/barber-shop-salon-6.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
           <div class="members">
             <div class="member-card">
               <a href="#" class="card-link"></a>
-              <img src="img/member1.jpg" alt="" class="member-img" />
+              <img src="img/member-team/member1.jpg" alt="" class="member-img" />
               <div class="member-description">
                 <h2 class="member-title">Emily</h2>
                 <div class="member-job">Master Barber & Color Expert</div>
@@ -114,7 +114,7 @@
 
             <div class="member-card">
               <a href="#" class="card-link"></a>
-              <img src="img/member2.jpg" alt="" class="member-img" />
+              <img src="img/member-team/member2.jpg" alt="" class="member-img" />
               <div class="member-description">
                 <h2 class="member-title">John</h2>
                 <div class="member-job">Master Barber & Color Expert</div>
@@ -123,7 +123,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
                     pariatur nemo tempore repellat?&hellip;
                   </p>
-                  <a href="#" class="member-read-more"
+                  <a href="member-team.html" class="member-read-more"
                     >Read more <i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -132,7 +132,7 @@
 
             <div class="member-card">
               <a href="#" class="card-link"></a>
-              <img src="img/member3.jpg" alt="" class="member-img" />
+              <img src="img/member-team/member3.jpg" alt="" class="member-img" />
               <div class="member-description">
                 <h2 class="member-title">Anne</h2>
                 <div class="member-job">Master Barber & Color Expert</div>
@@ -154,7 +154,7 @@
           <div class="members">
             <div class="member-card">
               <a href="#" class="card-link"></a>
-              <img src="img/member4.jpg" alt="" class="member-img" />
+              <img src="img/member-team/member4.jpg" alt="" class="member-img" />
               <div class="member-description">
                 <h2 class="member-title">Nicolas</h2>
                 <div class="member-job">Master Barber & Color Expert</div>
@@ -172,7 +172,7 @@
 
             <div class="member-card">
               <a href="#" class="card-link"></a>
-              <img src="img/member5.jpg" alt="" class="member-img" />
+              <img src="img/member-team/member5.jpg" alt="" class="member-img" />
               <div class="member-description">
                 <h2 class="member-title">Sofia</h2>
                 <div class="member-job">Master Barber & Color Expert</div>
@@ -190,7 +190,7 @@
 
             <div class="member-card">
               <a href="#" class="card-link"></a>
-              <img src="img/member6.jpg" alt="" class="member-img" />
+              <img src="img/member-team/member6.jpg" alt="" class="member-img" />
               <div class="member-description">
                 <h2 class="member-title">Raul</h2>
                 <div class="member-job">Master Barber & Color Expert</div>
@@ -211,10 +211,11 @@
       </div>
     </section>
 
+   <!-- Working hours-->
     <section class="container">
       <div class="working-hours-container">
         <div class="working-hours-img">
-          <img src="img/working-hours-img.jpg" alt="">
+          <img src="img/sections-img/working-hours-img.jpg" alt="">
          </div>
          <div class="content-container">
           <h2 class="title">Working <span class="accent-yellow">Hours</span></h2>
@@ -248,7 +249,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="card">
-              <img class="img-card" src="img/img-profile1.jpg" />
+              <img class="img-card" src="img/testimonial/img-profile1.jpg" />
               <div class="header-card">
                 <h4 class="name">Jake Nackos</h4>
                 <span class="fa fa-star checked"></span>
@@ -327,7 +328,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card">
-              <img class="img-card" src="img/img-profile2.jpg" />
+              <img class="img-card" src="img/testimonial/img-profile2.jpg" />
               <div class="header-card">
                 <h4 class="name">Miguel Torres</h4>
                 <span class="fa fa-star checked"></span>
@@ -406,7 +407,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card">
-              <img class="img-card" src="img/img-profile3.jpg" />
+              <img class="img-card" src="img/testimonial/img-profile3.jpg" />
               <div class="header-card">
                 <h4 class="name">Sarah Price</h4>
                 <span class="fa fa-star checked"></span>
@@ -485,7 +486,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card">
-              <img class="img-card" src="img/img-profile4.jpg" />
+              <img class="img-card" src="img/testimonial/img-profile4.jpg" />
               <div class="header-card">
                 <h4 class="name">Alex Suprun</h4>
                 <span class="fa fa-star checked"></span>
@@ -564,7 +565,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card">
-              <img class="img-card" src="img/img-profile5.jpg" />
+              <img class="img-card" src="img/testimonial/img-profile5.jpg" />
               <div class="header-card">
                 <h4 class="name">Jared Foster</h4>
                 <span class="fa fa-star checked"></span>
@@ -671,7 +672,7 @@
       <div class="container">
         <div class="footer-links">
           <a href="index.html" class="logo">
-            <img src="img/logo-black.png" alt="Logo" />
+            <img src="img/logo/logo-black.png" alt="Logo" />
           </a>
           <div class="footer-list">
             <p class="title-list">Menu</p>
