--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav class="navigation-component">
           <div class="elements-nav">
             <a href="index.html" class="logo"
-              ><img src="img/logo-white.png" alt=""
+              ><img src="img/logo/logo-white.png" alt=""
             /></a>
 
             <div class="menu">
@@ -66,7 +66,11 @@
       </div>
 
       <div class="container header">
-        <img src="img/background-triangle.png" class="triangle-bkg" alt="" />
+        <img
+          src="img/background/background-triangle.png"
+          class="triangle-bkg"
+          alt=""
+        />
         <div class="hero-component">
           <div class="hero-description">
             <h1 class="hero-title">
@@ -84,7 +88,7 @@
             >
           </div>
           <div class="hero-img">
-            <img src="img/barber-shop-salon-6.jpg" alt="" />
+            <img src="img/salon/barber-shop-salon-9.jpg" alt="" />
           </div>
           <div class="img-shadow"></div>
         </div>
@@ -108,7 +112,7 @@
           <!-- service 1 -->
           <div class="card">
             <div class="card-img">
-              <img src="img/icon-1.png" alt="" class="service-img" />
+              <img src="img/icons/icon-1.png" alt="" class="service-img" />
             </div>
             <h3 class="service-title">Lorem ipsum</h3>
             <p class="service-description">
@@ -119,7 +123,7 @@
           <!-- service 2 -->
           <div class="card">
             <div class="card-img">
-              <img src="img/icon-2.png" alt="" class="service-img" />
+              <img src="img/icons/icon-2.png" alt="" class="service-img" />
             </div>
             <h3 class="service-title">Lorem ipsum</h3>
             <p class="service-description">
@@ -130,7 +134,7 @@
           <!-- service 3 -->
           <div class="card">
             <div class="card-img">
-              <img src="img/icon-3.png" alt="" class="service-img" />
+              <img src="img/icons/icon-3.png" alt="" class="service-img" />
             </div>
             <h3 class="service-title">Lorem ipsum</h3>
             <p class="service-description">
@@ -141,7 +145,7 @@
           <!-- service 4 -->
           <div class="card">
             <div class="card-img">
-              <img src="img/icon-4.png" alt="" class="service-img" />
+              <img src="img/icons/icon-4.png" alt="" class="service-img" />
             </div>
             <h3 class="service-title">Lorem ipsum</h3>
             <p class="service-description">
@@ -260,7 +264,7 @@
         </div>
 
         <div class="form-img-box" aria-label="Woman enjoying food">
-          <img src="img/barber-shop-salon-4.jpg" alt="" />
+          <img src="img/salon/barber-shop-salon-4.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -288,7 +292,7 @@
       <div class="container">
         <div class="footer-links">
           <a href="index.html" class="logo">
-            <img src="img/logo-black.png" alt="Logo" />
+            <img src="img/logo/logo-black.png" alt="Logo" />
           </a>
           <div class="footer-list">
             <p class="title-list">Menu</p>
