--- a/member-team.html
+++ b/member-team.html
@@ -32,12 +32,12 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header">
+    <header class="header member-page">
       <div class="container">
         <nav class="navigation-component">
           <div class="elements-nav">
             <a href="index.html" class="logo"
-              ><img src="img/logo-white.png" alt=""
+              ><img src="img/logo/logo-white.png" alt=""
             /></a>
 
             <div class="menu">
@@ -45,10 +45,8 @@
                 <li class="list-link">
                   <a href="index.html" class="link-menu">Home</a>
                 </li>
-                <li class="list-link submenu-active">
-                  <a href="about-us.html" class="link-menu space active"
-                    >About Us</a
-                  >
+                <li class="list-link">
+                  <a href="about-us.html" class="link-menu space">About Us</a>
                 </li>
                 <li class="list-link">
                   <a href="appointment.html" class="link-menu">Appointment</a>
@@ -71,30 +69,43 @@
         </nav>
       </div>
 
-      <div class="container header">
-        <img src="img/background-triangle.png" class="triangle-bkg" alt="" />
-        <div class="hero-component left-img">
+      <div class="container member-page-container header">
+        <img
+          src="img/background/background-triangle.png"
+          class="triangle-bkg"
+          alt=""
+        />
+        <div class="hero-component">
           <div class="hero-description">
             <h1 class="hero-title about-us-title">
-              Know Us <span class="accent-yellow">Better</span>
+              Hey, I'm <span class="accent-yellow">John</span>
             </h1>
             <p class="hero-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
-            <div class="buttons-container">
-              <a href="appointment.html" class="primary-button"
-                >Make an appointment</a
-              >
-              <a href="about-us.html" class="primary-button transp"
-                >Find a barber</a
-              >
-            </div>
+            <a href="appointment.html" class="primary-button"
+              >Make an appointment</a
+            >
           </div>
-          <div class="hero-img">
-            <img src="img/barber-shop-salon-6.jpg" alt="" />
+          <div class="hero-img member-img">
+            <img src="img/member-team/member2.jpg" alt="" />
           </div>
+        </div>
+      </div>
+      <div class="member-info">
+        <div class="content-member-info">
+          <h3 class="number"><span class="accent-yellow">3+</span></h3>
+          <p class="info">Experience</p>
+        </div>
+        <div class="content-member-info">
+          <h3 class="number"><span class="accent-yellow">9.55</span></h3>
+          <p class="info">Rating</p>
+        </div>
+        <div class="content-member-info">
+          <h3 class="number"><span class="accent-yellow">23+</span></h3>
+          <p class="info">Satisfied clients</p>
         </div>
       </div>
     </header>
@@ -127,12 +138,67 @@
       </div>
     </section>
 
+    <section class="container">
+      <div class="gallery-photo-container">
+        <h2 class="title">
+          <span class="accent-yellow">Haircuts </span>Gallery
+        </h2>
+        <div class="photos">
+          <img
+            src="img/gallery/photo-gallery1.png"
+            class="gallery-img1"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery2.png"
+            class="gallery-img2"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery3.png"
+            class="gallery-img3"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery4.png"
+            class="gallery-img4"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery5.png"
+            class="gallery-img5"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery6.png"
+            class="gallery-img6"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery7.png"
+            class="gallery-img7"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery8.png"
+            class="gallery-img8"
+            alt=""
+          />
+          <img
+            src="img/gallery/photo-gallery9.png"
+            class="gallery-img9"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
         <div class="footer-links">
           <a href="index.html" class="logo">
-            <img src="img/logo-black.png" alt="Logo" />
+            <img src="img/logo/logo-black.png" alt="Logo" />
           </a>
           <div class="footer-list">
             <p class="title-list">Menu</p>
