--- a/member-team.html
+++ b/member-team.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barber Shop</title>
+    <title>Member</title>
 
     <link rel="stylesheet" href="src/scss/main.css" />
     <link
@@ -33,40 +33,47 @@
   <body>
     <!-- HEADER -->
     <header class="header member-page">
-      <div class="container">
-        <nav class="navigation-component">
-          <div class="elements-nav">
-            <a href="index.html" class="logo"
-              ><img src="img/logo/logo-white.png" alt=""
-            /></a>
+      <div class="nav-fixed">
+        <div class="container">
+          <nav class="navigation-component">
+            <div class="elements-nav">
+              <a href="index.html" class="logo"
+                ><img src="img/logo/logo-white.png" alt=""
+              /></a>
 
-            <div class="menu">
-              <ul class="list">
-                <li class="list-link">
-                  <a href="index.html" class="link-menu">Home</a>
-                </li>
-                <li class="list-link">
-                  <a href="about-us.html" class="link-menu space">About Us</a>
-                </li>
-                <li class="list-link">
-                  <a href="appointment.html" class="link-menu">Appointment</a>
-                </li>
-                <li class="list-link">
-                  <a href="contact.html" class="link-menu">Contact</a>
-                </li>
-              </ul>
-              <a href="#login" rel="modal:open" class="primary-button modal-btn"
-                >Login</a
-              >
-            </div>
+              <div class="menu">
+                <ul class="list">
+                  <li class="list-link">
+                    <a href="index.html" class="link-menu">Home</a>
+                  </li>
+                  <li class="list-link submenu-active">
+                    <a href="about-us.html" class="link-menu space active"
+                      >About Us</a
+                    >
+                  </li>
+                  <li class="list-link">
+                    <a href="appointment.html" class="link-menu">Appointment</a>
+                  </li>
+                  <li class="list-link">
+                    <a href="contact.html" class="link-menu">Contact</a>
+                  </li>
+                </ul>
+                <a
+                  href="#login"
+                  rel="modal:open"
+                  class="primary-button modal-btn"
+                  >Login</a
+                >
+              </div>
 
-            <div class="hamburger">
-              <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span>
+              <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
+        </div>
       </div>
 
       <div class="container member-page-container header">
@@ -75,7 +82,7 @@
           class="triangle-bkg"
           alt=""
         />
-        <div class="hero-component">
+        <div class="hero-component member-hero">
           <div class="hero-description">
             <h1 class="hero-title about-us-title">
               Hey, I'm <span class="accent-yellow">John</span>
@@ -226,7 +233,13 @@
 
           <div class="footer-list">
             <p class="title-list">Contact Us</p>
-            <p class="item-list" href="#s">Cluj-Napoca, str. Florilor 34</p>
+            <a
+              href="https://www.google.com/maps/place/Strada+Florilor+34,+Flore%C8%99ti+407280/@46.740548,23.494686,17z/data=!4m6!3m5!1s0x47490fd42b403af9:0x968e99efecefac54!8m2!3d46.7405477!4d23.4946855!16s%2Fg%2F11s_v8dqm_?hl=ro&entry=ttu"
+              target="_blank"
+              class="item-list"
+              href="#s"
+              >Cluj-Napoca, Florești, str. Florilor 34</a
+            >
             <a href="mailto:barberShop@yahoo.com" class="item-list"
               >barberShop@yahoo.com</a
             >
